[tool.poetry]
name = "nnts"
version = "0.1.3"
description = "Lightweight pytorch time series forecasting"
authors = ["Gareth Davies <garethmd@googlemail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
wandb = "^0.17.4"
seaborn = "^0.13.2"
plotly = "^5.22.0"
scipy = "^1.14.0"
pydantic = "^2.8.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^24.4.2"
flake8 = "^7.1.0"
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.2.2"
sphinxcontrib-katex = "^0.9.10"
sphinx-rtd-theme = "^2.0.0"
coverage = "^7.6.0"
pytorch-sphinx-theme = {git = "https://github.com/shiftlab/pytorch_sphinx_theme.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "*/tests/*",
]
